kubernetes/apps/longhorn-system/longhorn/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
spec:
  ingressClassName: internal
  rules:
    - host: longhorn.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${SECRET_DOMAIN}
